# situs

./: .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  security.yml
docs/: comparison.md  configuration.md  development.md  i18n.md  installation.md  release.md  troubleshooting.md  usage.md
docs/es/: README.md
docs/ja/: README.md
docs/ko/: README.md
docs/research/: 2026-05-24-competitive-analysis.md  2026-05-24-open-source-docs.md
docs/specs/: 2026-05-23-picker-continuous-improvement.md  2026-05-24-i18n-design.md
docs/zh-Hans/: README.md
fixtures/: screenshot-history.tsv
scripts/: capture-screenshots.js  verify-all.sh  verify-doc-i18n.sh  verify-picker-features.sh  verify-picker-modes.sh  verify-zsh-widget.sh
scripts/lib/: history-fixture.js
scripts/vhs/: fullscreen-demo.tape  inline-demo.tape  inline-tab.tape  prepare-vhs.js
src/: command.rs  config.rs  context.rs  doctor.rs  error.rs  main.rs  model.rs  setup.rs  shell.rs  stats.rs  terminal.rs
src/atuin/: db.rs  import.rs  mod.rs  sync.rs
src/cli/: args.rs  choose.rs  import.rs  mod.rs  record.rs
src/history/: encoding.rs  mod.rs  time.rs
src/i18n/: en.rs  es.rs  ja.rs  ko.rs  mod.rs  zh_hans.rs
src/matcher/: candidates.rs  filters.rs  mod.rs
src/picker/: clipboard.rs  fullscreen.rs  input.rs  keymap.rs  keys.rs  mod.rs  path.rs  plain.rs  session.rs  (+4 more)
tests/: acceptance.rs
(+10 files in other folders)
