[package]
name = "situs-cli"
version = "0.1.0"
edition = "2021"
description = "A shell helper that remembers where commands worked before."
license = "MIT"
readme = "README.md"
repository = "https://github.com/toddkim95/situs"
keywords = ["cli", "shell", "history", "zsh", "terminal"]
categories = ["command-line-utilities"]

[dependencies]
crossterm = "0.29.0"
libc = "0.2"
rusqlite = { version = "0.32", features = ["bundled"] }
ratatui = { version = "0.29.0", default-features = false, features = ["crossterm"] }

[[bin]]
name = "situs"
path = "src/main.rs"
